trying to fix alignment

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -26,6 +26,5 @@
     text-align: left;
     display: inline-block;
     vertical-align: top;
-    margin: 1% 1%;
     width: 100%;
 }
